--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.983.0",
     "cheerio": "^1.0.0-rc.10",
+    "chrome-aws-lambda": "^10.1.0",
     "puppeteer": "^10.2.0",
+    "puppeteer-core": "^10.2.0",
     "serverless-dotenv-plugin": "^3.9.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.71",
+    "@types/cheerio": "^0.22.30",
     "@types/node": "^14.14.25",
+    "@types/puppeteer": "^5.4.4",
     "serverless": "^2.23.0",
-    "serverless-webpack": "^5.5.3",
     "ts-loader": "^8.0.15",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.1.3",
-    "webpack": "^5.52.0"
+    "typescript": "^4.4.2"
   },
   "author": "bmccann36@gmail.com",
   "license": "MIT"
