--- a/serverless.yml
+++ b/serverless.yml
@@ -3,20 +3,25 @@ service: x-word-getter
 useDotenv: true
 plugins:
   - serverless-dotenv-plugin
-  - serverless-webpack
-package:
-  individually: true
 
 frameworkVersion: '2'
 
 provider:
   name: aws
-  runtime: nodejs14.x
+  runtime: nodejs12.x
   lambdaHashingVersion: '20201221'
+
+  ecr:
+    # In this section you can define images that will be built locally and uploaded to ECR
+    images:
+      appimage:
+        path: ./
 
 functions:
   PuzzleToS3Cron:
-    handler: src/handler/PuzzleToS3Cron.Handler
+    image:
+      name: appimage
+    # handler: dist/handler/PuzzleToS3Cron.Handler
     events:
       - schedule: cron(30 6 ? * MON,WED,FRI *)
     timeout: 90 # in seconds
