--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xwordgetter",
   "version": "1.0.0",
-  "description": "Serverless aws-nodejs-typescript template",
-  "main": "serverless.ts",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist && tsc"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -13,7 +13,6 @@
     "aws-sdk": "^2.983.0",
     "cheerio": "^1.0.0-rc.10",
     "chrome-aws-lambda": "^10.1.0",
-    "puppeteer": "^10.2.0",
     "puppeteer-core": "^10.2.0",
     "serverless-dotenv-plugin": "^3.9.0"
   },
@@ -22,6 +21,7 @@
     "@types/cheerio": "^0.22.30",
     "@types/node": "^14.14.25",
     "@types/puppeteer": "^5.4.4",
+    "dotenv": "^10.0.0",
     "serverless": "^2.23.0",
     "ts-loader": "^8.0.15",
     "ts-node": "^9.1.1",
