--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && tsc"
+    "build": "rimraf dist && tsc",
+    "build:deploy": "npm run build && serverless deploy --verbose"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -15,7 +16,9 @@
     "chrome-aws-lambda": "^10.1.0",
     "puppeteer": "^10.2.0",
     "puppeteer-core": "^10.2.0",
-    "serverless-dotenv-plugin": "^3.9.0"
+    "remarkable-typescript": "^1.1.3",
+    "serverless-dotenv-plugin": "^3.9.0",
+    "uuid-by-string": "^3.0.4"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.71",
