--- a/serverless.yml
+++ b/serverless.yml
@@ -28,6 +28,7 @@ provider:
             - s3:ListObject
             - s3:ListBucket
             - s3:GetObject
+            - s3:PutObject
 
 functions:
   PuzzleToS3Cron:
